<?xml version="1.0" encoding="UTF-8"?>

<resources>
    <string name="app_name">Sportiduino Manager</string>
    <string name="navigation_header">Mode of Work</string>
    <string name="acra_toast_text">Application was stopped due to error, detailed report
        will be sent to mmb.progressor.ru</string>
    <string name="app_name_version">%1$s %2$s</string>

    <string name="unknown">\?\?\?</string>

    <string name="menu_back">Back</string>
    <string name="mode_cloud_download">Download race and teams</string>
    <string name="mode_cloud_upload">Upload results to site</string>
    <string name="mode_cloud_done">Download results from site</string>
    <string name="mode_bluetooth_select">Select Station</string>
    <string name="mode_bluetooth_set">Configure station %1$s</string>
    <string name="mode_chip_init">Init Chips</string>
    <string name="mode_chip_init_name">Init Chips at %1$s</string>
    <string name="mode_control_point">Control point</string>
    <string name="mode_control_point_name">Control point %1$s</string>
    <string name="mode_team_list">Browse team results</string>
    <string name="mode_chip_info">Chip info</string>

    <string name="database_status_unknown">Database status unknown</string>
    <string name="database_fatal_error">Database fatal error, something gone wrong</string>
    <string name="database_empty">Local database is empty, download data from site</string>
    <string name="database_ok">Local database is in healthy state</string>
    <string name="database_damaged">Database is damaged, download race and teams again!</string>
    <string name="download_results">Download results from site</string>
    <string name="send_results">Send my results to site</string>
    <string name="send_database">Send database for testing</string>
    <string name="download_distance">Download race and teams</string>
    <string name="email">EMail</string>
    <string name="password">Password</string>
    <string name="use_test_site">Use test site</string>
    <string name="init_point_name">Initialization</string>
    <string name="download_distance_success">Distance was successfully downloaded</string>
    <string name="send_results_success">Chip data were successfully sent to site</string>
    <string name="send_results_failure">Local chips data has been changed, please, resend
        it</string>
    <string name="send_database_success">Database file was successfully sent to site</string>
    <string name="database_distance_version">Race/teams from %1$s site, downloaded %2$s</string>
    <string name="database_local_init">Local chips initialized: %1$d (%2$d of them were
        uploaded)</string>
    <string name="database_local_results">Local results registered: %1$d (%2$d of them were
        uploaded)</string>
    <string name="site_name_test">test</string>
    <string name="site_name_main">main</string>
    <string name="control_point_prefix">CP</string>

    <string name="device_search">Search for BT devices</string>
    <string name="device_name">%1$s (%2$s)</string>
    <string name="device_connect_description">Press to connect to the device</string>
    <string name="connected_station">Connected station</string>
    <string name="station_firmware">Firmware version %1$d</string>
    <string name="station_voltage">Battery voltage %1$.2fV, temperature %2$d°C</string>
    <string name="response_time">Response time %1$dms</string>
    <string name="station_mode">Current mode</string>
    <string name="station_mode_value_0">Initialization at %1$s</string>
    <string name="station_mode_value_1">Start point %1$s</string>
    <string name="station_mode_value_2">Finish point %1$s</string>
    <string name="station_mode_unknown">Unknown mode</string>
    <string name="station_new_point">New point</string>
    <string name="station_new_mode">New mode</string>
    <string name="station_mode_0">Init</string>
    <string name="station_mode_1">Start</string>
    <string name="station_mode_2">Finish</string>
    <string name="station_change_mode">Update</string>
    <string name="station_time_drift">Time drift: %1$ds</string>
    <string name="station_sync_time">Synchronize</string>
    <string name="station_chips_registered">Chips registered</string>
    <string name="station_chips_registered_n">%1$d</string>
    <string name="station_last_chip">Last chip at</string>
    <plurals name="station_reset_time">
        <item quantity="one">%1$d second to complete</item>
        <item quantity="other">%1$d seconds to complete</item>
    </plurals>

    <string name="team_number_title">Team number</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_del">\u232b</string>
    <string name="key_clear">\u00d7</string>
    <string name="team_number">-</string>
    <string name="team_maps_count">Maps: %1$d</string>
    <string name="team_members_count">Members: %1$d</string>
    <string name="init_team_chip">Init chip</string>
    <string name="init_success">Chip was initialized</string>

    <string name="cp_total_teams">Teams: %1$d</string>
    <string name="cp_team_name">№%1$d %2$s</string>
    <string name="cp_punched">Punched: %1$s</string>
    <string name="cp_skipped">Skipped: %1$s</string>
    <string name="cp_save_mask">Register dismissal</string>
    <string name="list_team_count">%1$d</string>
    <string name="list_team_time">%1$s</string>
    <plurals name="cp_scan_time">
        <item quantity="one">%1$d second to complete</item>
        <item quantity="other">%1$d seconds to complete</item>
    </plurals>
    <string name="monitoring_service">Monitoring connected station for new punches</string>

    <string name="info_request">Read chip data</string>
    <string name="info_save_to_db">Save data from chip to database</string>
    <string name="info_help">Put a chip on the station and click the button to view chip content</string>
    <string name="info_team_name">№%1$d %2$s</string>
    <string name="list_point_name">%1$s</string>
    <string name="list_point_time">%1$s</string>
</resources>
